syntax = "proto3";

import "messages/rpc_auth_messages.proto";

package car_service;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse);
}
